--- a/templats/base.html
+++ b/templats/base.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <nav>
-            <a href="/">Home</a>
-            <a href="about">About as</a>
+            <a href="{% url 'home'%}">Home</a>
+            <a href="{% url 'about'%}">About as</a>
         </nav>
     </header>
     {% block content %}
